# rf-codec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  rs_codec.h
HammingCodec.xcodeproj/: project.pbxproj
HammingCodec.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HammingCodec.xcodeproj/project.xcworkspace/xcuserdata/oceanlab.xcuserdatad/: UserInterfaceState.xcuserstate
HammingCodec.xcodeproj/xcshareddata/xcschemes/: HammingCodesTest.xcscheme
HammingCodec.xcodeproj/xcuserdata/oceanlab.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
HammingCodes.xcodeproj/: project.pbxproj
HammingCodes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HammingCodes.xcodeproj/project.xcworkspace/xcuserdata/oceanlab.xcuserdatad/: UserInterfaceState.xcuserstate
RFCodec.xcodeproj/: project.pbxproj
RFCodec.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RFCodec.xcodeproj/xcshareddata/xcschemes/: HammingCodec.xcscheme  HammingCodesTest.xcscheme
codec/: CMakeLists.txt  bit_array.c  codec.c  codec.h  main.c  utils.c  utils.h
hamming_codes/: CMakeLists.txt  bit_array.c  bit_array.h  hamming_encode.c  hamming_encode.h  main.c  utils.c  utils.h
include/: bit_array.h  hamming_encode.h
rf_codec/: CMakeLists.txt  bit_array.c  bit_array.h  ccitt_whitening.c  ccitt_whitening.h  gf.c  gf.h  hamming_codec.c  hamming_codec.h  main.c  rs_codec.c  rs_codec.h  utils.c  utils.h
src/: bit_array.c  hamming_encode.c  main.c  utils.c
test/: CMakeLists.txt  tests.c
testing/: CMakeLists.txt  tests.c
tests/: CMakeLists.txt  munit.c  munit.h
(+7 files in other folders)
